kubernetes/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
  namespace: dev
  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
        labels:
          app: frontend 
        annotations:
          sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      serviceAccountName: frontend
      securityContext: 
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: frontend
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
          image: 739022091869.dkr.ecr.ap-south-1.amazonaws.com/frontend:10
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 10
            httpGet: 
              path: /_healthz
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-readiness-probe"
          livenessProbe:
            initialDelaySeconds: 10
            httpGet: 
              path: /_healthz
              port: 8080
              httpHeaders:
              - name: "Cookie"
                value: "shop_session-id=x-liveness-probe"
         - name: AD_SERVICE_ADDR
            valueFrom:
              configMapKeyRef:
                name: frontend-config
                key: ad_service_addr
          - name: SHOPPING_ASSISTANT_SERVICE_ADDR
            valueFrom:
              configMapKeyRef:
                name: frontend-config
                key: shopping_assistant_service_addr
          - name: ENABLE_PROFILER
            valueFrom:
              configMapKeyRef:
                name: frontend-config
                key: enable_profiler
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
