kubernetes/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dev

spec:
  selector:
    app: frontend
  ports:
  -port: 80
   targetPort: 8080
